# sentinel

./: .gitignore  LICENSE  README.md
observer/: config.ts  deno.json  main.ts
observer/src/: capture.ts  ipc.ts  state.ts  vlm.ts
renderer/: Cargo.toml
renderer/src/: gpu.rs  ipc.rs  main.rs  render.rs
renderer/src/shaders/: entity.wgsl  render.wgsl  simulation.wgsl
shared/: protocol.md
tools/: mock-observer.ts
